--- a/imports/assets/scss/components/richtext.sass
+++ b/imports/assets/scss/components/richtext.sass
@@ -65,6 +65,9 @@
 a[href="https://www.froala.com/wysiwyg-editor?k=u"]
   display: none !important
 
+.fr-box
+  z-index: 0
+
 .fr-image-resizer
   @apply .border-dtek
 
